--- a/index.html
+++ b/index.html
@@ -1,260 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanaka Shumba Portfolio</title>
-    <style>
-        /* Reset */
-        * { margin: 0; padding: 0; box-sizing: border-box; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tanaka Shumba Portfolio</title>
+<style>
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background: #0d0d0d;
+        color: #f0f0f0;
+        line-height: 1.6;
+        scroll-behavior: smooth;
+    }
 
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #0d0d0d;
-            color: #f0f0f0;
-            line-height: 1.6;
-            scroll-behavior: smooth;
-        }
+    /* Animated neon grid background */
+    body::before {
+        content: "";
+        position: fixed;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: linear-gradient(45deg, #0d0d0d, #111111);
+        z-index: -2;
+    }
 
-        a { text-decoration: none; color: #1e90ff; }
+    .neon-grid {
+        position: fixed;
+        top: 0; left: 0;
+        width: 200%; height: 200%;
+        background-image: repeating-linear-gradient(0deg, transparent, transparent 49px, #00bfff 50px),
+                          repeating-linear-gradient(90deg, transparent, transparent 49px, #1e90ff 50px);
+        background-size: 50px 50px;
+        opacity: 0.05;
+        animation: moveGrid 60s linear infinite;
+        z-index: -1;
+    }
 
-        header {
-            text-align: center;
-            padding: 80px 20px 40px;
-            background: linear-gradient(135deg, #0d0d0d 0%, #1a1a1a 100%);
-            border-bottom: 2px solid #1e90ff;
-        }
+    @keyframes moveGrid {
+        from { transform: translate(0,0); }
+        to { transform: translate(-50px, -50px); }
+    }
 
-        header h1 {
-            font-size: 3rem;
-            margin-bottom: 10px;
-            color: #1e90ff;
-        }
+    header {
+        text-align: center;
+        padding: 80px 20px 40px;
+        border-bottom: 2px solid #1e90ff;
+        background: rgba(13,13,13,0.85);
+    }
+    header h1 {
+        font-size: 3rem;
+        margin-bottom: 10px;
+        color: #00bfff;
+        text-shadow: 0 0 5px #00bfff;
+    }
+    header p { font-size: 1.2rem; max-width: 600px; margin: 0 auto; color: #aaa; }
 
-        header p {
-            font-size: 1.2rem;
-            max-width: 600px;
-            margin: 0 auto;
-        }
+    nav {
+        background: rgba(17,17,17,0.9);
+        display: flex;
+        justify-content: center;
+        padding: 15px;
+        border-bottom: 1px solid #1e90ff;
+        position: sticky;
+        top: 0;
+        z-index: 10;
+    }
+    nav a { margin: 0 15px; font-weight: bold; color:#00bfff; transition: color 0.3s; }
+    nav a:hover { color: #1e90ff; }
 
-        nav {
-            background: #111;
-            display: flex;
-            justify-content: center;
-            padding: 15px;
-            border-bottom: 1px solid #1e90ff;
-        }
+    section {
+        padding: 80px 20px;
+        max-width: 1000px;
+        margin: 0 auto 40px;
+        background: rgba(13,13,13,0.85);
+        border-radius: 10px;
+        box-shadow: 0 0 20px rgba(0,191,255,0.2);
+    }
 
-        nav a {
-            margin: 0 15px;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
+    #about { display: flex; flex-wrap: wrap; align-items: center; justify-content: center; }
+    #about img {
+        width: 250px; height: 250px; border-radius: 50%;
+        margin-right: 40px; margin-bottom:20px;
+        border: 3px solid #1e90ff;
+        box-shadow: 0 0 15px #00bfff;
+    }
+    #about .about-text { max-width: 600px; }
+    #about h2, #projects h2, #contact h2 {
+        color: #1e90ff; margin-bottom:20px; text-shadow: 0 0 5px #00bfff;
+    }
 
-        nav a:hover { color: #00bfff; }
+    .project-grid {
+        display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px;
+    }
+    .project-card {
+        background: #1a1a1a; padding: 20px; border-radius:10px;
+        border: 1px solid #1e90ff; transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .project-card:hover {
+        transform: translateY(-5px); box-shadow: 0 0 20px #00bfff;
+    }
+    .project-card h3 { color:#00bfff; margin-bottom:10px; }
+    .project-card p { margin-bottom:10px; }
+    .project-card a { color:#1e90ff; font-weight:bold; }
 
-        section {
-            padding: 80px 20px;
-            max-width: 1000px;
-            margin: 0 auto;
-        }
+    #contact form { max-width:500px; margin:0 auto; display:flex; flex-direction:column; }
+    #contact input, #contact textarea {
+        padding:12px; margin-bottom:20px; border-radius:5px;
+        border:1px solid #1e90ff; background:#0d0d0d; color:#f0f0f0;
+    }
+    #contact button {
+        padding:12px; background:#1e90ff; border:none; color:#fff; font-weight:bold;
+        border-radius:5px; cursor:pointer; transition: background 0.3s;
+    }
+    #contact button:hover { background:#00bfff; }
 
-        /* About Me */
-        #about {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: center;
-        }
-
-        #about img {
-            width: 250px;
-            height: 250px;
-            border-radius: 50%;
-            margin-right: 40px;
-            margin-bottom: 20px;
-            border: 3px solid #1e90ff;
-        }
-
-        #about .about-text {
-            max-width: 600px;
-        }
-
-        #about h2 {
-            color: #1e90ff;
-            margin-bottom: 20px;
-        }
-
-        /* Projects */
-        #projects h2 {
-            color: #1e90ff;
-            margin-bottom: 40px;
-            text-align: center;
-        }
-
-        .project-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 20px;
-        }
-
-        .project-card {
-            background: #1a1a1a;
-            padding: 20px;
-            border-radius: 10px;
-            border: 1px solid #1e90ff;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .project-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 0 20px #1e90ff;
-        }
-
-        .project-card h3 { color: #00bfff; margin-bottom: 10px; }
-        .project-card p { margin-bottom: 10px; }
-        .project-card a { color: #1e90ff; font-weight: bold; }
-
-        /* Contact */
-        #contact h2 {
-            color: #1e90ff;
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
-        #contact form {
-            max-width: 500px;
-            margin: 0 auto;
-            display: flex;
-            flex-direction: column;
-        }
-
-        #contact input, #contact textarea {
-            padding: 12px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-            border: 1px solid #1e90ff;
-            background: #0d0d0d;
-            color: #f0f0f0;
-        }
-
-        #contact button {
-            padding: 12px;
-            background: #1e90ff;
-            border: none;
-            color: #fff;
-            font-weight: bold;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-
-        #contact button:hover { background: #00bfff; }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #111;
-            border-top: 1px solid #1e90ff;
-        }
-
-    </style>
+    footer {
+        text-align:center; padding:20px; background:#111; border-top:1px solid #1e90ff;
+    }
+</style>
 </head>
 <body>
 
-    <header>
-        <h1>Tanaka Shumba</h1>
-        <p>Cybersecurity professional | Python, Network Security, Penetration Testing | Seeking opportunities to strengthen organizational security posture</p>
-    </header>
+<div class="neon-grid"></div>
 
-    <nav>
-        <a href="#about">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
+<header>
+    <h1>Tanaka Shumba</h1>
+    <p>Cybersecurity professional | Python, Network Security, Penetration Testing | Seeking opportunities to strengthen organizational security posture</p>
+</header>
 
-    <!-- About Me -->
-    <section id="about">
-        <img src="images/about-me.jpg" alt="Tanaka Shumba">
-        <div class="about-text">
-            <h2>About Me</h2>
-            <p>Detail-oriented Cybersecurity professional with a B.S. in Cybersecurity and pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Proficient in Python, Java, and security tools like Wireshark, Zeek, Snort, and Nmap. Skilled at analyzing logs, identifying vulnerabilities, and implementing mitigation strategies. Seeking to contribute to a SOC or cybersecurity team to strengthen organizational security posture.</p>
+<nav>
+    <a href="#about">About Me</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+</nav>
+
+<section id="about">
+    <img src="images/about-me.jpg" alt="Tanaka Shumba">
+    <div class="about-text">
+        <h2>About Me</h2>
+        <p>Detail-oriented Cybersecurity professional with a B.S. in Cybersecurity and pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Skilled at analyzing logs, identifying vulnerabilities, and implementing mitigation strategies. Seeking to contribute to a SOC or cybersecurity team to strengthen organizational security posture.</p>
+    </div>
+</section>
+
+<section id="projects">
+    <h2>Projects</h2>
+    <div class="project-grid">
+        <div class="project-card">
+            <h3>Malware Analyzer</h3>
+            <p>Python script simulating malware analysis and threat detection.</p>
+            <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View Project</a>
         </div>
-    </section>
-
-    <!-- Projects -->
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project-grid">
-            <div class="project-card">
-                <h3>Malware Analyzer</h3>
-                <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.</p>
-                <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>Ethical Hacking Sim</h3>
-                <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
-                <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>Cloud Security Checker</h3>
-                <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
-                <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>Basic Pen Test</h3>
-                <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
-                <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>Simple IDS</h3>
-                <p>A basic IDS/IPS simulation in Python.</p>
-                <a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>Cybersecurity Lab Series</h3>
-                <p>Educational Python projects for cybersecurity learning.</p>
-                <a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>Secure Hospital System</h3>
-                <p>Python-based secure hospital management system.</p>
-                <a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>VoIP Traffic Analyzer</h3>
-                <p>Python project analyzing VoIP RTP packets on a local network.</p>
-                <a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>Python Network Scanner</h3>
-                <p>Python project for network scanning.</p>
-                <a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>Healthcare System</h3>
-                <p>Flask-based simple healthcare management system.</p>
-                <a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank">View Project</a>
-            </div>
+        <div class="project-card">
+            <h3>Ethical Hacking Sim</h3>
+            <p>Python simulation scripts demonstrating ethical hacking techniques.</p>
+            <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View Project</a>
         </div>
-    </section>
+        <div class="project-card">
+            <h3>Cloud Security Checker</h3>
+            <p>Python script checking cloud service security configurations.</p>
+            <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View Project</a>
+        </div>
+    </div>
+</section>
 
-    <!-- Contact -->
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <form action="mailto:tanakashumba04@gmail.com" method="post" enctype="text/plain">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-        <p style="text-align:center; margin-top:20px;">LinkedIn: <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">https://www.linkedin.com/in/tanakashumba-</a></p>
-        <p style="text-align:center;">Email: tanakashumba04@gmail.com</p>
-    </section>
+<section id="contact">
+    <h2>Contact Me</h2>
+    <form action="mailto:tanakashumba04@gmail.com" method="post" enctype="text/plain">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+    </form>
+    <p style="text-align:center; margin-top:20px;">LinkedIn: <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">https://www.linkedin.com/in/tanakashumba-</a></p>
+    <p style="text-align:center;">Email: tanakashumba04@gmail.com</p>
+</section>
 
-    <footer>
-        &copy; 2025 Tanaka Shumba. All rights reserved.
-    </footer>
+<footer>
+    &copy; 2025 Tanaka Shumba. All rights reserved.
+</footer>
 
 </body>
 </html>
