--- a/index.html
+++ b/index.html
@@ -3,181 +3,166 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tanaka Shumba Portfolio</title>
+<title>Tanaka Shumba | Cybersecurity Portfolio</title>
 <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
+    /* Basic Reset */
+    * {margin:0; padding:0; box-sizing:border-box; font-family: 'Arial', sans-serif;}
     body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background: #0d0d0d;
-        color: #f0f0f0;
-        line-height: 1.6;
-        scroll-behavior: smooth;
+        background: #0a0a0a;
+        color: #fff;
+        overflow-x: hidden;
     }
 
     /* Animated neon grid background */
     body::before {
-        content: "";
+        content: '';
         position: fixed;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
-        background: linear-gradient(45deg, #0d0d0d, #111111);
+        top:0; left:0; width:100%; height:100%;
+        background: linear-gradient(0deg, #0a0a0a 50%, #111 50%);
+        background-size: 100% 40px;
         z-index: -2;
+        animation: moveGrid 5s linear infinite;
     }
-
-    .neon-grid {
-        position: fixed;
-        top: 0; left: 0;
-        width: 200%; height: 200%;
-        background-image: repeating-linear-gradient(0deg, transparent, transparent 49px, #00bfff 50px),
-                          repeating-linear-gradient(90deg, transparent, transparent 49px, #1e90ff 50px);
-        background-size: 50px 50px;
-        opacity: 0.05;
-        animation: moveGrid 60s linear infinite;
-        z-index: -1;
-    }
-
     @keyframes moveGrid {
-        from { transform: translate(0,0); }
-        to { transform: translate(-50px, -50px); }
+        0% {background-position:0 0;}
+        100% {background-position:0 40px;}
     }
 
     header {
-        text-align: center;
-        padding: 80px 20px 40px;
-        border-bottom: 2px solid #1e90ff;
-        background: rgba(13,13,13,0.85);
+        text-align:center;
+        padding:100px 20px 60px;
+        background: linear-gradient(90deg,#0011ff,#00ffff);
+        color:#fff;
+        box-shadow: 0 0 20px #00ffff;
     }
-    header h1 {
-        font-size: 3rem;
-        margin-bottom: 10px;
-        color: #00bfff;
-        text-shadow: 0 0 5px #00bfff;
-    }
-    header p { font-size: 1.2rem; max-width: 600px; margin: 0 auto; color: #aaa; }
-
-    nav {
-        background: rgba(17,17,17,0.9);
-        display: flex;
-        justify-content: center;
-        padding: 15px;
-        border-bottom: 1px solid #1e90ff;
-        position: sticky;
-        top: 0;
-        z-index: 10;
-    }
-    nav a { margin: 0 15px; font-weight: bold; color:#00bfff; transition: color 0.3s; }
-    nav a:hover { color: #1e90ff; }
+    header h1 {font-size:3em; text-shadow: 0 0 10px #00ffff;}
+    header p {font-size:1.2em; margin-top:10px;}
 
     section {
-        padding: 80px 20px;
-        max-width: 1000px;
-        margin: 0 auto 40px;
-        background: rgba(13,13,13,0.85);
-        border-radius: 10px;
-        box-shadow: 0 0 20px rgba(0,191,255,0.2);
+        padding:60px 20px;
+        max-width:1000px;
+        margin:0 auto;
+        opacity:0;
+        transform: translateY(50px);
+        transition: all 1s ease;
     }
+    section.visible {opacity:1; transform: translateY(0);}
+    h2 {text-align:center; font-size:2em; margin-bottom:40px; color:#00ccff;}
 
-    #about { display: flex; flex-wrap: wrap; align-items: center; justify-content: center; }
-    #about img {
-        width: 250px; height: 250px; border-radius: 50%;
-        margin-right: 40px; margin-bottom:20px;
-        border: 3px solid #1e90ff;
-        box-shadow: 0 0 15px #00bfff;
-    }
-    #about .about-text { max-width: 600px; }
-    #about h2, #projects h2, #contact h2 {
-        color: #1e90ff; margin-bottom:20px; text-shadow: 0 0 5px #00bfff;
-    }
+    /* About Me */
+    #about-me {display:flex; align-items:center; gap:40px; flex-wrap:wrap; justify-content:center;}
+    #about-me img {border-radius:50%; width:200px; height:200px; border:3px solid #00ccff;}
+    #about-me .text {max-width:600px; font-size:1.1em; line-height:1.6; color:#eee;}
 
-    .project-grid {
-        display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px;
-    }
-    .project-card {
-        background: #1a1a1a; padding: 20px; border-radius:10px;
-        border: 1px solid #1e90ff; transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .project-card:hover {
-        transform: translateY(-5px); box-shadow: 0 0 20px #00bfff;
-    }
-    .project-card h3 { color:#00bfff; margin-bottom:10px; }
-    .project-card p { margin-bottom:10px; }
-    .project-card a { color:#1e90ff; font-weight:bold; }
+    /* Projects */
+    .projects {display:grid; grid-template-columns: repeat(auto-fit,minmax(280px,1fr)); gap:20px;}
+    .project-card {background:#111; padding:20px; border-radius:10px; border:2px solid #00ccff; transition: transform 0.3s, box-shadow 0.3s;}
+    .project-card:hover {transform: translateY(-10px); box-shadow:0 0 20px #00ffff;}
+    .project-card h3 {color:#00ccff; margin-bottom:10px;}
+    .project-card p {color:#aaa; font-size:0.95em;}
+    .project-card a {color:#00ffff; text-decoration:none; font-weight:bold;}
+    .project-card a:hover {text-decoration:underline;}
 
-    #contact form { max-width:500px; margin:0 auto; display:flex; flex-direction:column; }
-    #contact input, #contact textarea {
-        padding:12px; margin-bottom:20px; border-radius:5px;
-        border:1px solid #1e90ff; background:#0d0d0d; color:#f0f0f0;
-    }
-    #contact button {
-        padding:12px; background:#1e90ff; border:none; color:#fff; font-weight:bold;
-        border-radius:5px; cursor:pointer; transition: background 0.3s;
-    }
-    #contact button:hover { background:#00bfff; }
+    /* Contact */
+    .contact a {color:#00ffff; text-decoration:none; font-weight:bold;}
+    .contact a:hover {text-decoration:underline;}
 
-    footer {
-        text-align:center; padding:20px; background:#111; border-top:1px solid #1e90ff;
-    }
+    footer {text-align:center; padding:30px 20px; font-size:0.9em; color:#666; background:#111;}
 </style>
 </head>
 <body>
 
-<div class="neon-grid"></div>
-
 <header>
     <h1>Tanaka Shumba</h1>
-    <p>Cybersecurity professional | Python, Network Security, Penetration Testing | Seeking opportunities to strengthen organizational security posture</p>
+    <p>Cybersecurity Professional | Python | Pen Testing | Threat Detection</p>
 </header>
 
-<nav>
-    <a href="#about">About Me</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-</nav>
-
-<section id="about">
+<section id="about-me">
     <img src="images/about-me.jpg" alt="Tanaka Shumba">
-    <div class="about-text">
+    <div class="text">
         <h2>About Me</h2>
-        <p>Detail-oriented Cybersecurity professional with a B.S. in Cybersecurity and pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Skilled at analyzing logs, identifying vulnerabilities, and implementing mitigation strategies. Seeking to contribute to a SOC or cybersecurity team to strengthen organizational security posture.</p>
+        <p>I am a detail-oriented cybersecurity professional with a B.S. in Cybersecurity and currently pursuing an M.S. in Computer Science – Cybersecurity. I have hands-on experience in threat detection, incident response, penetration testing, and network monitoring. Skilled in Python, Java, and security tools like Wireshark, Zeek, Snort, and Nmap. My goal is to contribute to a SOC or cybersecurity team and help strengthen organizational security posture.</p>
     </div>
 </section>
 
 <section id="projects">
     <h2>Projects</h2>
-    <div class="project-grid">
+    <div class="projects">
         <div class="project-card">
             <h3>Malware Analyzer</h3>
-            <p>Python script simulating malware analysis and threat detection.</p>
+            <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.</p>
             <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View Project</a>
         </div>
         <div class="project-card">
-            <h3>Ethical Hacking Sim</h3>
-            <p>Python simulation scripts demonstrating ethical hacking techniques.</p>
+            <h3>Ethical Hacking Simulator</h3>
+            <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
             <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View Project</a>
         </div>
         <div class="project-card">
             <h3>Cloud Security Checker</h3>
-            <p>Python script checking cloud service security configurations.</p>
+            <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
             <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Basic Pen Test</h3>
+            <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
+            <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Simple IDS</h3>
+            <p>A basic IDS/IPS simulation in Python.</p>
+            <a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Cybersecurity Lab Series</h3>
+            <p>Collection of cybersecurity learning labs.</p>
+            <a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Secure Hospital System</h3>
+            <p>Python-based secure hospital management system.</p>
+            <a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>VoIP Traffic Analyzer</h3>
+            <p>Python project capturing and analyzing VoIP RTP packets on a local network.</p>
+            <a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Python Network Scanner</h3>
+            <p>Python project for network scanning and monitoring.</p>
+            <a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Healthcare System (Flask)</h3>
+            <p>Simple healthcare management system built with Flask to manage appointments, doctors, and payments.</p>
+            <a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank">View Project</a>
         </div>
     </div>
 </section>
 
 <section id="contact">
-    <h2>Contact Me</h2>
-    <form action="mailto:tanakashumba04@gmail.com" method="post" enctype="text/plain">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
-    </form>
-    <p style="text-align:center; margin-top:20px;">LinkedIn: <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">https://www.linkedin.com/in/tanakashumba-</a></p>
-    <p style="text-align:center;">Email: tanakashumba04@gmail.com</p>
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:tanakashumba04@gmail.com">tanakashumba04@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">linkedin.com/in/tanakashumba-</a></p>
 </section>
 
 <footer>
     &copy; 2025 Tanaka Shumba. All rights reserved.
 </footer>
+
+<script>
+    // Scroll fade-in animations
+    const sections = document.querySelectorAll('section');
+    const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if(entry.isIntersecting){
+                entry.target.classList.add('visible');
+            }
+        });
+    }, { threshold: 0.2 });
+    sections.forEach(section => observer.observe(section));
+</script>
 
 </body>
 </html>
