--- a/index.html
+++ b/index.html
@@ -5,68 +5,45 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tanaka Shumba | Cybersecurity Portfolio</title>
 <style>
-    * { margin:0; padding:0; box-sizing:border-box; font-family: 'Arial', sans-serif; }
-    body { background:#0a0a0a; color:#fff; overflow-x:hidden; position:relative; }
-    
-    /* 3D floating cubes */
-    .cube { position:fixed; width:20px; height:20px; background:#00ff00; opacity:0.3; animation: floatCube linear infinite; }
-    @keyframes floatCube {
-        0% {transform: translate3d(0,0,0) rotate(0deg);}
-        50% {transform: translate3d(50vw,50vh,0) rotate(180deg);}
-        100% {transform: translate3d(-50vw,100vh,0) rotate(360deg);}
-    }
+/* Reset & basics */
+* { margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+body { background:#0f0f0f; color:#e0e0e0; overflow-x:hidden; }
+canvas#bgCanvas { position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; }
 
-    header {
-        text-align:center;
-        padding:100px 20px 60px;
-        background: linear-gradient(90deg,#0011ff,#00ffff);
-        color:#fff;
-        box-shadow: 0 0 20px #00ffff;
-        position:relative;
-        z-index:1;
-    }
-    header h1 { font-size:3em; text-shadow:0 0 10px #00ffff; }
-    header p { font-size:1.2em; margin-top:10px; }
+/* Header */
+header { background:rgba(17,17,17,0.9); padding:80px 20px; text-align:center; border-bottom:3px solid #00ff00; }
+header h1 { font-size:3em; color:#00ff00; margin-bottom:10px; }
+header p { font-size:1.2em; color:#aaa; }
 
-    section { padding:60px 20px; max-width:1000px; margin:0 auto; opacity:0; transform: translateY(50px); transition: all 1s ease; position:relative; z-index:1; }
-    section.visible { opacity:1; transform:translateY(0); }
-    h2 { text-align:center; font-size:2em; margin-bottom:40px; color:#00ccff; }
+/* Sections */
+section { max-width:1000px; margin:60px auto; padding:0 20px; position:relative; z-index:1; }
+h2 { font-size:2em; color:#00ff00; text-align:center; margin-bottom:40px; }
 
-    /* About Me */
-    #about-me { display:flex; align-items:center; gap:40px; flex-wrap:wrap; justify-content:center; }
-    #about-me img { border-radius:50%; width:200px; height:200px; border:3px solid #00ccff; }
-    #about-me .text { max-width:600px; font-size:1.1em; line-height:1.6; color:#eee; }
+/* About Me */
+#about-me { display:flex; flex-wrap:wrap; gap:40px; align-items:center; justify-content:center; }
+#about-me img { border-radius:50%; width:200px; height:200px; border:3px solid #00ff00; object-fit:cover; }
+#about-me .text { max-width:600px; font-size:1.1em; }
 
-    /* Projects */
-    .projects { display:grid; grid-template-columns: repeat(auto-fit,minmax(280px,1fr)); gap:20px; }
-    .project-card { background:#111; padding:20px; border-radius:10px; border:2px solid #00ccff; transition: transform 0.3s, box-shadow 0.3s, border-color 0.3s; }
-    .project-card:hover { transform: translateY(-10px); box-shadow:0 0 30px #00ffff; border-color:#00ffff; }
-    .project-card h3 { color:#00ccff; margin-bottom:10px; }
-    .project-card p { color:#aaa; font-size:0.95em; }
-    .project-card a { color:#00ffff; text-decoration:none; font-weight:bold; }
-    .project-card a:hover { text-decoration:underline; }
+/* Projects */
+.projects { display:grid; grid-template-columns:repeat(auto-fit, minmax(280px, 1fr)); gap:20px; }
+.project-card { background:rgba(26,26,26,0.9); padding:20px; border-radius:10px; border-left:4px solid #00ff00; transition:all 0.3s ease; }
+.project-card:hover { transform: translateY(-5px); box-shadow:0 0 15px #00ff00; }
+.project-card h3 { color:#00ff00; margin-bottom:10px; }
+.project-card p { color:#ccc; font-size:0.95em; }
+.project-card a { color:#00ff00; text-decoration:none; font-weight:bold; }
+.project-card a:hover { text-decoration:underline; }
 
-    /* Contact */
-    .contact a { color:#00ffff; text-decoration:none; font-weight:bold; }
-    .contact a:hover { text-decoration:underline; }
+/* Contact */
+.contact a { color:#00ff00; text-decoration:none; font-weight:bold; }
+.contact a:hover { text-decoration:underline; }
 
-    footer { text-align:center; padding:30px 20px; font-size:0.9em; color:#666; background:#111; position:relative; z-index:1; }
+/* Footer */
+footer { text-align:center; padding:30px 20px; font-size:0.9em; color:#666; border-top:1px solid #222; }
 </style>
 </head>
 <body>
 
-<!-- Floating cubes -->
-<script>
-for(let i=0;i<30;i++){
-    let cube = document.createElement('div');
-    cube.className='cube';
-    cube.style.left=Math.random()*100+'vw';
-    cube.style.top=Math.random()*100+'vh';
-    cube.style.width = cube.style.height = (10+Math.random()*20)+'px';
-    cube.style.animationDuration = (5+Math.random()*10)+'s';
-    document.body.appendChild(cube);
-}
-</script>
+<canvas id="bgCanvas"></canvas>
 
 <header>
     <h1>Tanaka Shumba</h1>
@@ -99,16 +76,6 @@ for(let i=0;i<30;i++){
             <p>Simulates checking cloud service configurations for security.</p>
             <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View Project</a>
         </div>
-        <div class="project-card">
-            <h3>Basic Pen Test</h3>
-            <p>Educational penetration testing and vulnerability scanning.</p>
-            <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View Project</a>
-        </div>
-        <div class="project-card">
-            <h3>Simple IDS</h3>
-            <p>Basic IDS/IPS simulation in Python.</p>
-            <a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View Project</a>
-        </div>
     </div>
 </section>
 
@@ -123,16 +90,47 @@ for(let i=0;i<30;i++){
 </footer>
 
 <script>
-    // Scroll fade-in animations
-    const sections = document.querySelectorAll('section');
-    const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-            if(entry.isIntersecting){
-                entry.target.classList.add('visible');
-            }
-        });
-    }, { threshold: 0.2 });
-    sections.forEach(section => observer.observe(section));
+// 3D Neon Green Cubes Background
+const canvas = document.getElementById('bgCanvas');
+const ctx = canvas.getContext('2d');
+let w = canvas.width = window.innerWidth;
+let h = canvas.height = window.innerHeight;
+
+class Cube {
+    constructor(){
+        this.x = Math.random() * w;
+        this.y = Math.random() * h;
+        this.size = Math.random() * 30 + 10;
+        this.angle = Math.random() * Math.PI * 2;
+        this.speed = Math.random() * 0.02 + 0.01;
+    }
+    update(){ this.angle += this.speed; }
+    draw(){
+        ctx.save();
+        ctx.translate(this.x, this.y);
+        ctx.rotate(this.angle);
+        ctx.strokeStyle = 'lime';
+        ctx.lineWidth = 2;
+        ctx.strokeRect(-this.size/2, -this.size/2, this.size, this.size);
+        ctx.restore();
+    }
+}
+
+let cubes = [];
+for(let i=0;i<60;i++){ cubes.push(new Cube()); }
+
+function animate(){
+    ctx.clearRect(0,0,w,h);
+    cubes.forEach(c=>{ c.update(); c.draw(); });
+    requestAnimationFrame(animate);
+}
+
+window.addEventListener('resize', ()=>{
+    w=canvas.width=window.innerWidth;
+    h=canvas.height=window.innerHeight;
+});
+
+animate();
 </script>
 
 </body>
